@@ -659,6 +659,8 @@ Xu Zhongxing                        xu_zhong_xing@163.com
 Yang Ren                            ryang@redhat.com
 Yanko Kaneti                        yaneti@declera.com
 Yann Dirson                         dirson@debian.org
+Youngjun Song                       mastojun@gmail.com
+Choi Jongu                          zoopi01@gmail.com
 Yutaka Amanai                       yasai-itame1942@jade.plala.or.jp
 
 ;; Local Variables:
